--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 	<title>MEDIA.INC</title>
 	<link rel="shortcut icon" href="./favicon.ico">
 	<link rel="stylesheet" type="text/css" href="./style.css">
-	<script type="text/javascript" src="./timer.js"></script>
 </head>
-<body onload="Init()">
-	
+<body>
+	<script type="text/javascript" src="./scripts/script.js"></script>
 </body>
 </html>
