--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>MEDIA.INC</title>
+	<title>여론 조작</title>
 	<link rel="shortcut icon" href="./favicon.ico">
-	<link rel="stylesheet" type="text/css" href="./style.css">
+	<link rel="stylesheet" type="text/css" href="./index/style.css">
 </head>
 <body>
-	<script type="text/javascript" src="./scripts/script.js"></script>
+	<a href="./game/game.html" id="playbutton">PLAY</a>
 </body>
 </html>
