--- a/game/game.html
+++ b/game/game.html
@@ -8,8 +8,9 @@
 	<title>orami</title>
 </head>
 <body>
-	<div id="text"></div>
-	<span id=container></span>
+	<div id=area>
+		<span id=container></span>
+	</div>
 	<script type="text/javascript" src="./script.js"></script>
 </body>
 </html>
